# NAOTutorial2016

./: .gitignore  CMakeLists.txt  main.cpp  manifest.json  qiproject.xml
build-naoqi64/: CMakeCache.txt  Makefile  cmake_install.cmake  programaprueba.cbp
build-naoqi64/sdk/share/qi/: path.conf
build-sys-linux-x86_64/: CMakeCache.txt
build-sys-linux-x86_64/sdk/share/qi/: path.conf
